# atak_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
atak_bridge/: CMakeLists.txt
atak_bridge/include/atak_bridge/: CoTClient.hpp  macro.h
atak_bridge/include/utility/: timeStrings.hpp  xstr.hpp
atak_bridge/launch/: bridge.launch
atak_bridge/msg/: AtakContactList.msg
atak_bridge/src/: Bridge.cpp  CoTClient.cpp  XmlMessagingBase.cpp  contact_pub.py  fix_pub.py
docs/: Cot_Message_examples.xml
include/atak_bridge/: CoTClient.hpp
include/messaging/: XmlMessagingBase.hpp
include/utility/: StringConversions.hpp
launch/: bridge.launch  bridge_oop.launch  bridge_oop_sim_jh.launch  dcist_obj2tak.launch  dcist_tak.launch  echo_launch.launch  grnd_tak_bridge.launch  img_tak_bridge.launch  nondcist_tak_bridge.launch  oop_tak_bridge.launch  plugin_tak_bridge.launch  rviz.rviz  teleop.launch  teleop_xbox.yaml  test_tak.launch  test_tak_bridge.launch  tf_test.launch  uas_tak_bridge.launch  uas_tak_bridge_ranger.launch  upenn_tak_bridge.launch
msg/: AtakContact.msg  PoseDescription.msg  PoseDescriptionArray.msg  PoseDescriptionHeader.msg
src/: .yolo_data.txt.swp  LatLongUTMconversion.py  ROSCOTBridge.cpp  atak_bridge_basestation.py  atak_bridge_node.py  dcist_cots.py  dcist_cots_uav.py  dtis_code.py  dynamic_tf.py  dynamic_tf2.py  fix_pub.py  frames.gv  global_cords_node.py  goto_target.py  map_2_world.py  map_converter.py  map_server.py  nondcist_grnd.py  num_pub.py  obj_2_atak.py  obj_2_atak_uav.py  obj_2_map.py  oop_dcist_air.py  oop_dcist_atak.py  oop_dcist_atak_sim_jh.py  oop_dcist_grnd.py  oop_dcist_plugin.py  oop_dcist_upenn.py  oop_img_node.py  radbot_test.py  takmsg_echo.py  test_robot.py  tf_research.py  utm_2_map.py  yolo_data.txt  yolo_deploy_data.txt
src/takpak/: README.md  cmdvel_drive.py  mkcot.py  mkcot_beta.py  takcot.py  takcot.py.ssl.bak
